src/objects/Case_Detail__c.object
<CustomObject>
    <description>Detail object for Case for general purpose</description>
    <fields>
        <fullName>Adapted_to_customer__c</fullName>
        <inlineHelpText>The CS Rep adapted their approach to providing service to the customer based on the customer’s unique needs, personality and issues</inlineHelpText>
        <label>Adapted to customers needs and issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_questions_or_issues__c</fullName>
        <inlineHelpText>The CS Rep asked if the customer if they have any additional questions or issues before ending the call, referring to their personal or company situation (e.g. I see you joined IATA recently. Is there any way I can assist with some of your doubts)</inlineHelpText>
        <label>Asked for additional questions or issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adressed_the_customer_appropriately__c</fullName>
        <inlineHelpText>The CS Rep addresses the customer appropriately and writes the customer&apos;s name correctly</inlineHelpText>
        <label>Adressed the customer appropriately</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Expected__c</fullName>
        <description>Agreed amount to be paid for an instalment</description>
        <label>Amount Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <description>Amount received on payment (of an instalment)</description>
        <label>Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asked_IATA_code_email_and_phone__c</fullName>
        <inlineHelpText>The CS Rep asked for the caller&apos;s IATA code and verify email and phone number.</inlineHelpText>
        <label>Asked IATA code, email and phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asked_callers_name__c</fullName>
        <inlineHelpText>The CS Rep asked for the caller’s name</inlineHelpText>
        <label>Asked callers name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asks_if_additional_confirmation__c</fullName>
        <inlineHelpText>The CS Rep asks the customer if they would like to get a written confirmation. In case the customer says yes: has this been done?</inlineHelpText>
        <label>Asks if additional confirmation is requi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avoided_long_silences__c</fullName>
        <inlineHelpText>The CS Rep avoided long silences during the call</inlineHelpText>
        <label>Avoided long silences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Lookup to master object</description>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Details</relationshipLabel>
        <relationshipName>Case_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checked_account_offers_services__c</fullName>
        <inlineHelpText>The CS Rep proactively checks the accounts and offers opportunities for additional services (i.e. portal accesses, admins, pending users…)</inlineHelpText>
        <label>Checked account &amp; offers  services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_2__c</fullName>
        <description>Additional field for comments</description>
        <label>Comments 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_3__c</fullName>
        <description>Additional field for comments</description>
        <label>Comments 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_4__c</fullName>
        <description>Additional field for comments</description>
        <label>Comments 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional comments to the record</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confident__c</fullName>
        <inlineHelpText>The CS Rep remained confident throughout the call</inlineHelpText>
        <label>Remained confident throughout the call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correctly_pronounced_caller_s_name__c</fullName>
        <inlineHelpText>The CS Rep used the proper pronunciation of the caller’s name</inlineHelpText>
        <label>Correctly pronounced caller&apos;s name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency taken from the case</description>
        <formula>Case__r.Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_received__c</fullName>
        <description>Date the payment of an instalment was received</description>
        <label>Date received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_not_talk_over_the_customer__c</fullName>
        <inlineHelpText>The CS Rep did not interrupt or talk over the customer</inlineHelpText>
        <label>Did not talk over the customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documented_info_in_case__c</fullName>
        <inlineHelpText>The CS Rep documented complete call information in the Salesforce case</inlineHelpText>
        <label>Documented the info in the SF case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <description>Date and instalment needs to be paid</description>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_active_listening_skills__c</fullName>
        <inlineHelpText>The CS Rep used effective active listening skills</inlineHelpText>
        <label>Effective active listening skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <description>Exchange rate of the currency taken from the case</description>
        <formula>Case__r.CurrencyExchangeRateUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finalized_with_a_WOW__c</fullName>
        <inlineHelpText>The CS Rep finalized the call/case with a &quot;WOW&quot;</inlineHelpText>
        <label>Finalized with a &quot;WOW&quot;</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Followed_up_with_customer_as_agreed__c</fullName>
        <inlineHelpText>The CS Rep followed up with the customer through the Customer Portal within the agreed upon timeframe</inlineHelpText>
        <label>Followed up with customer as agreed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friendly_polite_and_professional__c</fullName>
        <inlineHelpText>The CS Rep was friendly, polite and professional</inlineHelpText>
        <label>Was friendly, polite and professional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identified_themselves__c</fullName>
        <description>The CS Rep identified themselves to the customer</description>
        <inlineHelpText>The CS Rep identified themselves to the customer</inlineHelpText>
        <label>Identified themselves</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_within_scripts_guide__c</fullName>
        <inlineHelpText>The CS Rep adequately adapted their approach to interacting with the customer, within the scripts guidelines, when necessary</inlineHelpText>
        <label>Interaction was within the scripts guide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <description>Installment interest amount</description>
        <label>Interest Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Currency__c</fullName>
        <description>Installment interest currency (ex: USD)</description>
        <label>Interest Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_of_IATA__c</fullName>
        <inlineHelpText>The CS Reps demonstrates accurate knowledge of the processes and products of IATA, and provides correct information and guidance to the customers.</inlineHelpText>
        <label>Demonstrates accurate knowledge of IATA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentioned_IATA__c</fullName>
        <inlineHelpText>The CS Rep mentioned IATA</inlineHelpText>
        <label>Mentioned IATA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_issue_avoidance__c</fullName>
        <inlineHelpText>Next Issue Avoidance: The CS Rep informed the customer of relevant supporting documentation or instructions to help avoid future issues</inlineHelpText>
        <label>Next issue avoidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_assistance__c</fullName>
        <inlineHelpText>The CS Rep offered assistance to the caller</inlineHelpText>
        <label>Offered assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>Status of the payment of the instalment</description>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>To be confirmed</fullName>
                </value>
                <value>
                    <fullName>Not received by due date</fullName>
                </value>
                <value>
                    <fullName>Amount Received After Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PercentScore__c</fullName>
        <description>(Score)/(Sum of weights of yes and no’s)*100</description>
        <label>% Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pertinent_questions__c</fullName>
        <inlineHelpText>The CS Rep asked pertinent questions to accurately diagnose the problem</inlineHelpText>
        <label>Pertinent questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_and_represents_IATA__c</fullName>
        <inlineHelpText>The CS Rep remembers he is representing IATA in every single word used. The CS Rep uses a professional and customer centric language.</inlineHelpText>
        <label>Was professional and represents IATA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_tone__c</fullName>
        <inlineHelpText>The CS Rep maintained proper tone, pitch, volume and pace throughout the call</inlineHelpText>
        <label>Proper tone, pitch, volume and pace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provided_reference__c</fullName>
        <inlineHelpText>The CS Rep provided a reference number to the customer after resolving their issue</inlineHelpText>
        <label>Provided reference number to customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refrained_using_complicated_jargon__c</fullName>
        <inlineHelpText>The CS Rep refrained from using complicated jargon and adapted their responses to the customer&apos;s need.</inlineHelpText>
        <label>Refrained from using complicated jargon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_fully_resolved_in_line__c</fullName>
        <inlineHelpText>The CS Rep resolved the request fully in line with the customer&apos;s request. The case has not been closed before having provided a full resolution.</inlineHelpText>
        <label>Request fully resolved in line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_case_was_edited_correctly__c</fullName>
        <inlineHelpText>The Salesforce case was edited correctly. If the opportunity took place, has the CS Rep added some &quot;remarks&quot; about the customer in their contact detail?</inlineHelpText>
        <label>SF case was edited correctly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <label>Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summarized_at_the_end_of_the_call__c</fullName>
        <inlineHelpText>The CS Rep summarized the call, indicated action items (if any) and ensure information is clear for the customer.</inlineHelpText>
        <label>Summarized at the end of the call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summarized_customers_main_points__c</fullName>
        <inlineHelpText>The CS Rep summarized the customer’s main points before troubleshooting or offering a solution</inlineHelpText>
        <label>Summarized customers main points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thanked_Customer_for_calling__c</fullName>
        <inlineHelpText>Thank you for calling IATA. We are here for you for future occasions.</inlineHelpText>
        <label>Thanked Customer for calling at the end</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thanked_the_Customer__c</fullName>
        <inlineHelpText>The CS Rep thanked the customer</inlineHelpText>
        <label>Thanked the Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Took_ownership_of_problem__c</fullName>
        <inlineHelpText>The CS Rep took ownership of the problem using the &quot;I&quot;, not the &quot;we&quot; or &quot;they&quot;.  If required, the CS Rep provided an apology for any dissatisfaction.</inlineHelpText>
        <label>Took ownership of problem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_courteous_words_and_phrases__c</fullName>
        <inlineHelpText>The CS Rep used courteous words and phrases</inlineHelpText>
        <label>Used courteous words and phrases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_resources__c</fullName>
        <inlineHelpText>The CS Rep used appropriate resources to address the issue and offers preferences</inlineHelpText>
        <label>Used appropriate resources</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validated_account_and_contact__c</fullName>
        <inlineHelpText>Data quality - The CS Rep took the time to validate account and contact details as email and phone number</inlineHelpText>
        <label>Validated account and contact details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_email_and_phone_number__c</fullName>
        <inlineHelpText>The CS Rep asked for the caller&apos;s IATA code and verify email and phone number.</inlineHelpText>
        <label>Verified email and phone number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Detail</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Case Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Details</pluralLabel>
    <recordTypes>
        <fullName>Call_Monitoring</fullName>
        <active>true</active>
        <description>Used for checklist to monitor CS reps call cases</description>
        <label>Call Monitoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Monitoring</fullName>
        <active>true</active>
        <label>Case Monitoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repayment_Instalment</fullName>
        <active>true</active>
        <description>Payment information for SIDRA cases</description>
        <label>Repayment Instalment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repayment_Instalment_Details</fullName>
        <active>true</active>
        <description>Record Type to store instalment details</description>
        <label>Repayment Instalment Details</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>